--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ node_modules/*
 
 helix-importer-ui
 .DS_Store
+.idea
+adobe-screens-brandads.iml
+Screens Innovation Meeting with Michael Marth.pptx
