--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -10,7 +10,8 @@
     {
       "id": "foo",
       "title": "Foo",
-      "url": "/tools/sidekick/foo.html"
+      "event": "foo",
+      "environments": ["dev", "preview", "live","edit"]
     }
   ]
 }
