--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -13,7 +13,7 @@
       "event": "foo",
       "environments": ["dev", "preview", "live","edit"],
       "isPalette": true,
-      "paletteRect": "top: auto; bottom: 25px; left: 5px; width: 300px; height: calc(100% - 200px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;display:none;",
+      "paletteRect": "top: auto; bottom: 25px; left: 5px; width: 300px; height: calc(100% - 200px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;",
       "url": "/tools/sidekick/foo.html",
       "includePaths": [ "**.docx**" ]
 
