updating sharepoint.js

--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -14,7 +14,7 @@
       "environments": ["dev", "preview", "live","edit"],
       "isPalette": true,
       "paletteRect": "top: auto; bottom: 25px; left: 5px; width: 300px; height: calc(100% - 200px); border-radius: var(--hlx-sk-button-border-radius); overflow: hidden; resize: horizontal;",
-      "url": "/tools/sidekick/foo.html",
+      "url": "/tools/my-app/build/index.html",
       "includePaths": [ "**.docx**" ]
 
     },
